# LoriOS

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability-report.md
Kernel/: CMakeLists.txt  README.md  linkscript-x86.ld
Kernel/Include/: ATTENTION.md  Hash.h  Logging.h  Lori.h  Math.h  Panic.h  String.h
Kernel/Include/FileSystem/: Filesystem.h
Kernel/Include/Huinya/: AddressSpace.h  KMalloc.h  VMObject.cpp
Kernel/Include/Storage/: GPT.h
Kernel/Include/TTY/: PTY.h
Kernel/Include/Video/: Video.h  VideoConsole.h
Kernel/Include/x86_64/: ABI.h  ACPI.h  APIC.h  BootProtocols.h  CPU.h  Compiler.h  Debug.h  ELF.h  HAL.h  IDT.h  IOPorts.h  Memory.h  Module.h  Modules.h  PCI.h  PCIVendors.h  PS2.h  Paging.h  PhysicalAllocator.h  SMP.h  Scheduler.h  Serial.h  StackTrace.h  Symbols.h  Syscalls.h  TSS.h  Thread.h  Timer.h  Types.h
Kernel/Modules/: CMakeLists.txt  README.md
Kernel/Modules/Ext2/: Ext2.h  Main.cpp
Kernel/Modules/Intel8254x/: 8254x.h  Main.cpp
Kernel/Modules/PCAudio/: AC97.cpp  AC97.h  Audio.h  HDAudio.cpp  HDAudio.h  Main.cpp
Kernel/Modules/TestModule/: Main.cpp  StringTest.cpp  Tests.h  Threading.cpp
Kernel/include/: ABI  ATA.h  Assert.h  CString.h  CharacterBuffer.h  Device.h  Endian.h  Errno.h  Error.h  Framebuffer.h  Hash.h  Liballoc.h  List.h  Lock.h  Log.h  Lori.h  Math.h  MiscHdr.h  Move.h  OnCleanup.h  Pair.h  Panic.h  RefPtr.h  RingBuffer.h  SharedMemory.h  Signal.h  Spinlock.h  Stream.h  String.h  StringView.h  SystemInfo.h  TTraits.h  TimerEvent.h  UserPointer.h  Vector.h
Kernel/include/Arch/x86_64/: ABI.h  ACPI.h  APIC.h  BootProtocols.h  CPU.h  Compiler.h  Debug.h  ELF.h  HAL.h  IDT.h  IOPorts.h  Memory.h  Module.h  Modules.h  PCI.h  PCIVendors.h  Paging.h  PhysicalAllocator.h  SMP.h  Scheduler.h  Serial.h  StackTrace.h  Symbols.h  Syscalls.h  TSS.h  Thread.h  Timer.h
Kernel/include/Audio/: Audio.h
Kernel/include/FileSystem/: EPoll.h  Fat32.h  Filesystem.h  FsVolume.h  Initrd.h  Pipe.h  TAR.h  Tmp.h  VolumeManager.h
Kernel/include/Memory/: AddressSpace.h  VMObject.h
Kernel/include/Net/: Adapter.h  If.h  Net.h  Socket.h
Kernel/include/Storage/: AHCI.h  ATADrive.h  GPT.h  NVMe.h
Kernel/include/TTY/: PTY.h
Kernel/include/USB/: XHCI.h
Kernel/include/Video/: Video.h  VideoConsole.h
Kernel/src/: Assert.cpp  CharacterBuffer.cpp  Debug.cpp  Device.cpp  Hash.cpp  Kernel.cpp  Lock.cpp  Log.cpp  Logging.cpp  Lori.cpp  Math.cpp  Panic.cpp  README.md  RUNTIME.cpp  Runtime.cpp  SharedMemory.cpp  Streams.cpp  String.cpp  message.md
Kernel/src/Arch/x86_64/: ACPI.cpp  APIC.cpp  CPUID.cpp  ELF.cpp  Entry,asm  HAL.cpp  IDT.asm  IDT.cpp  Modules.cpp  PCI.cpp  PS2.cpp  Paging.cpp  PhysicalAllocator.cpp  README.md  SMP.cpp  SSP.cpp  Scheduler.cpp  Serial.cpp  StringSafe.cpp  Symbols.cpp  Syscalls.cpp  TSS.asm  TSS.cpp  Thread.cpp  Timer.cpp  smpdefines.inc
Kernel/src/Arch/x86_64/Syscalls/: EPoll.cpp  Filesystem.cpp
Kernel/src/FileSystem/: Fat32.cpp  Filesystem.cpp  Fs.cpp  FsNode.cpp  FsVolume.cpp  Pipe.cpp  TAR.cpp  Tmp.cpp  VolumeManager.cpp
Kernel/src/Huinya/: AddressSpace.cpp  AdressSpace.cpp  KMalloc.cpp  VMObject.cpp
Kernel/src/MM/: KMalloc.cpp
Kernel/src/Memory/: AddressSpace.cpp  KMalloc.cpp  VMObject.cpp
Kernel/src/Net/: IPSocket.cpp  IP_socket.cpp  Interface.cpp  Net.cpp  NetworkAdapter.cpp  Socket.cpp  TCP.cpp  UDP.cpp
Kernel/src/Storage/: AHCIController.cpp  AHCIPort.cpp  AHCI_contoller.cpp  AHCI_port.cpp  ATA.cpp  ATADrive.cpp  ATA_drive.cpp  DiskDevice.cpp  GPT.cpp  NVMe.cpp  NVMeNamespace.cpp  PartitionDevice.cpp
Kernel/src/TTY/: PTMX.cpp  PTY.cpp
Kernel/src/USB/: XHCI.cpp
Kernel/src/Video/: Video.cpp  VideoConsole.cpp
Kernel/src/x86_64/: ACPI.cpp  APIC.cpp  CPUID.cpp  ELF.cpp  HAL.cpp  IDT.cpp  Modules.cpp  PCI.cpp  PS2.cpp  Paging.cpp  PhysicalAllocator.cpp  README.md  SMP.cpp  SMPTrampoline.asm  SSP.cpp  Scheduler.cpp  Serial.cpp  StringSave.cpp  Symbols.cpp  TSS.asm  TSS.cpp  Thread.cpp  Timer.cpp  smpdefines.inc  syscall.asm
Kernel/src/x86_64/Syscalls/: EPoll.cpp  FileSystem.cpp  Filesystem.cpp
lib/include/ABI/: Audio.h
lib/include/Lori/: Types.h
lib/src/: CFGParser.cpp  ConfigManager.cpp  Lexer.cpp  Logger.cpp  SHA.cpp  Serializable.cpp  URL.cpp  Unicode.cpp
lib/src/Graphics/: Color.cpp  FastMem.cpp
(+52 files in other folders)
